# detect_behavior_competition

./: .gitignore  README.md  eda.ipynb  main.py  pyproject.toml
eda_and_basic_approach/: basic_classification.ipynb  eda.ipynb  main.py  preprocess.py  pyproject.toml
eda_and_basic_approach/torch_test/: test.py
fundational/: moment.ipynb  pyproject.toml
notebooks/: basic_classification.ipynb
